--- a/ticketing-app/src/App.css
+++ b/ticketing-app/src/App.css
@@ -5,6 +5,11 @@
   font-size: 10px;
 }
 
+html, body {
+  width: 100%;
+  overflow: hidden
+}
+
 li {
   font-size: 2rem;
 }
@@ -17,8 +22,33 @@ li {
 .navigation {
   flex: 1;
   height: 100vh;
+  position: fixed;
+  border-right: solid 1px grey;
+}
+
+.navigation > ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 60%;
+  list-style-type: none;
+}
+
+li {
+  flex: 1;
+  text-align: center;
+}
+
+li > div {
+  padding: 5rem 2rem;
 }
 
 #root {
-  flex: 1;
+  flex: 8;
+}
+
+div > span {
+  display: block;
+  font-size: 2rem;
 }
