--- a/ticketing-app/src/App.css
+++ b/ticketing-app/src/App.css
@@ -14,38 +14,12 @@ li {
   font-size: 2rem;
 }
 
-.container {
+.App {
   display: flex;
   flex-direction: row;
-}
-
-.navigation {
-  flex: 1;
   height: 100vh;
-  position: fixed;
-  border-right: solid 1px grey;
-}
-
-.navigation > ul {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 60%;
-  list-style-type: none;
-}
-
-li {
-  flex: 1;
-  text-align: center;
-}
-
-li > div {
-  padding: 5rem 2rem;
-}
-
-#root {
-  flex: 8;
+  width: 100%;
+  background-color: blue;
 }
 
 div > span {
