--- a/ticketing-app/src/Components/Navigation/Navigation.css
+++ b/ticketing-app/src/Components/Navigation/Navigation.css
@@ -14,11 +14,11 @@
     list-style-type: none;
   }
   
-  li {
+  .navigation > ul > li {
     flex: 1;
     text-align: center;
   }
   
-  li > div {
+  .navigation > ul > li > div {
     padding: 5rem 2rem;
   }
